name:                pipes-wai
version:             3.2.0
synopsis:            A light-weight wrapper around Network.Wai to provide easy pipes support. (ported from wai-conduit)
description:         A light-weight wrapper around Network.Wai to provide easy pipes support.
homepage:            http://github.com/iand675/pipes-wai
license:             MIT
license-file:        LICENSE
author:              Ian Duncan
maintainer:          ian@iankduncan.com
category:            Web, Pipes
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Pipes.Wai
  build-depends:       base == 4.*
                     , wai >=3.0 && < 3.3
                     , pipes >=4
                     , transformers
                     , bytestring
                     , http-types
                     , blaze-builder
  hs-source-dirs:      src
  default-language:    Haskell2010

benchmark pipes-wai-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Bench.hs
  build-depends:       base
                     , pipes-wai
                     , criterion
                     , random
                     , wai
                     , pipes
                     , transformers
                     , bytestring
